fix: added spacing between buttons

--- a/static/css/button.css
+++ b/static/css/button.css
@@ -10,7 +10,7 @@ button {
   justify-content: center;
   min-width: 126px;
   padding: 8px 24px;
-  margin: .5vh 1vw .5vh 0;
+  margin: 6px 12px 6px 0;
   font-family: default;
   font-size: 0.95rem;
   font-weight: normal;
